# HCS

./: .gitignore  .travis.yml  INSTALL.md  Makefile  Makefile.am  README.adoc  README.md  configure.ac  hcs.cc
data/: uncrustify.cfg
doc/: HCS.1  README.adoc
include/: hcs-ea.h  hcs-pps.h  hcs.h
src/: hcs-ea.cc  hcs-pps.cc  hcs.cc
